--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stargeek</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="index.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="indexmobile.css">
+
     <style>
-    @import url('https://fonts.googleapis.com/css2?family=Alata&family=Stick&display=swap');
-     </style>        
+        @import url('https://fonts.googleapis.com/css2?family=Alata&family=Stick&display=swap');
+    </style>
 </head>
+
 <body>
     <div class="container">
 
@@ -37,7 +41,7 @@
                 <h1>StarGeek</h1>
             </div>
             <div class="linha">
-                
+
             </div>
             <div class="slogan">
                 Onde a cultura geek <br>
@@ -53,7 +57,7 @@
             </div>
 
             <div class="imagens">
-                <img src="imagens/Rectangle 10.jpg" alt="Batman"> 
+                <img src="imagens/Rectangle 10.jpg" alt="Batman">
                 <img src="imagens/Rectangle 3.jpg" alt="Miranha">
                 <img src="imagens/Rectangle 9.png" alt="Homem de Iron">
             </div>
@@ -63,8 +67,17 @@
         <!--Rodapé do Site-->
 
         <footer class="rodape">
-            
-        </footer>
+            <div class="info">
+                <ul>
+                    <li>Sobre Nós</li>
+                    <li>Ajuda</li>
+                    <li>Termos de uso</li>
+                </ul>
+            </div>
+    </div>
+
+    </footer>
     </div>
 </body>
+
 </html>
