--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="cadastro.css">
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="cadastro.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="cadastromobile.css">
 </head>
 
 <body>
@@ -22,7 +23,7 @@
                 <input type="email">
                 <label for="">Senha</label>
                 <input type="password">
-                <label for="">Confirme sua Senha</label>
+                <label for="">Confirmar Senha</label>
                 <input type="password">
                 <input type="submit" value="Confirmar" id="lbotao">
             </form>
