--- a/config.html
+++ b/config.html
@@ -6,25 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configurações</title>
-    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="config.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="configmobile.css">
 </head>
 
 <body>
+
+    <!-- Header -->
+
     <header class="header">
         <div class="logo">
-            <img src="imagens/logo.png" alt="Logo">
+          <img src="imagens/logo.png" alt="Logo">
         </div>
-        <div class="dropper"><button class="user">
-                <img src="imagens/User.png" alt="">
-            </button>
-            <div class="drop-profile">
-                <a href="config.html">Cnfig</a>
-                <a href="privacidade.html">Privc</a>
-                <a href="index.html">Sair</a>
-            </div>
+        <a href="#menu" class="dropper">
+          <img src="imagens/User.png" alt="" class="a">
+          <div class="drop-profile" id="menu">
+            <a href="main.html">Catálogo</a>
+            <a href="config.html">Configurações</a>
+            <a href="privacidade.html">Privacidade</a>
+            <a href="index.html">Sair</a>
+          </a>
         </div>
-    </header>
-    <main>
+      </header>
+
+      <main>
         <h1>Configurações</h1>
         <div class="linha"></div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br> eiusmod tempor incididunt ut labore et
