--- a/login.html
+++ b/login.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" media="screen and (min-width: 900px)" href="login.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="loginmobile.css">
 </head>
 
 <body>
