--- a/main.html
+++ b/main.html
@@ -39,9 +39,9 @@
       <h1>Meu catálogo</h1>
       <div class="linha"></div>
       <div class="cards">
-        <a class="card" href="#demo-modal">
+        <button class="card" href="#demo-modal">
           <img src="imagens/adicionar.png" alt="Adicionar Item" class="cardeum">
-        </a>
+        </button>
         <a href="#" id="card2" class="carduse">
           <img src="imagens/card2.png" alt="Card" class="cardedois">
         </a>
