--- a/cadastro.html
+++ b/cadastro.html
@@ -15,21 +15,24 @@
         <header><img src="imagens/logo.png" alt=""></header>
         <main></main>
         <section>
-            <form action="main.html">
+            <form action="" id="formulario">
                 <h1>Cadastro</h1>
-                <label for="">Nome</label>
-                <input type="text">
-                <label for="">E-mail</label>
-                <input type="email">
-                <label for="">Senha</label>
-                <input type="password">
-                <label for="">Confirmar Senha</label>
-                <input type="password">
-                <input type="submit" value="Confirmar" id="lbotao">
+                <label for="nome">Nome</label>
+                <input type="text" name="nome" id="nome">
+                <label for="email">E-mail</label>
+                <input type="email" name="email" id="email">
+                <label for="senha">Senha</label>
+                <input type="password" name="senha" id="senha">
+                <label for="csenha">Confirmar Senha</label>
+                <input type="password" name="csenha" id="csenha">
+                <label for="check">Permanecer logado</label>
+                <input type="checkbox" name="check" id="check">
+                <button id="btn">Confirmar</button>
             </form>
         </section>
         <!-- <footer>f</footer>-->
     </div>
+    <script src="cadastro.js"></script>
 </body>
 
 </html>
