--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Login</title>
     <link rel="stylesheet" media="screen and (min-width: 900px)" href="login.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="loginmobile.css">
 </head>
@@ -15,19 +15,21 @@
         <header><img src="imagens/logo.png" alt=""></header>
         <main></main>
         <section>
-            <form action="main.html">
+            <form action="" id="formulariol">
                 <h1>Login</h1>
-                <label for="">Nome</label>
-                <input type="text">
-                <label for="">E-mail</label>
-                <input type="email">
-                <label for="">Senha</label>
-                <input type="password">
-                <input type="submit" value="Confirmar" id="lbotao">
+                <label for="eemail">E-mail</label>
+                <input type="email" name="eemail" id="eemail">
+                <label for="ssenha">Senha</label>
+                <input type="password" name="ssenha" id="ssenha">
+                <label for="check">Permanecer logado</label>
+                <input type="checkbox" name="lcheck" id="lcheck">
+                <button id="btn">Confirmar</button>
             </form>
         </section>
         <!-- <footer>f</footer>-->
     </div>
+    <script src="login.js
+"></script>
 </body>
 
 </html>
