--- a/main.html
+++ b/main.html
@@ -38,35 +38,34 @@
 
       <h1>Meu catálogo</h1>
       <div class="linha"></div>
+      <button id="btn" class="botaodebotaroitemnocatalogo">
+        <img src="imagens/adicionar.png" alt="Adicionar Item" class="cardeum">
+      </button>
+      <div class="mensagem"></div>
       <div class="cards">
-        <button class="card" href="#demo-modal">
-          <img src="imagens/adicionar.png" alt="Adicionar Item" class="cardeum">
-        </button>
-        <a href="#" id="card2" class="carduse">
-          <img src="imagens/card2.png" alt="Card" class="cardedois">
-        </a>
       </div>
 
       <!-- Modal -->
 
-      <div id="demo-modal" class="modal">
-        <div class="modal__content">
-
-          <div class="modalsquare">
-            <div class="addimg">
-              <h1>Adicione a Capa da Obra</h1>
-            </div>
-            <a href="#card2" class="botao"><input type="submit" value="Confirmar" id="lbotao" href></a>
-
-            <div class="addspoiler">
-              <h1>Adicione o Título e a Sinopse</h1>
-            </div>
-
-          </div>
-        </div>
-      </div>
+      <div class="cadmodal">
+        <div class="modal">
+        <form action="" id="formulario">
+            <label for="nome" class="label">Nome</label>
+            <input type="text" name="nome" id="nome">
+            <label for="descricao" class="label">Descrição</label>
+            <textarea name="descricao" id="descricao" cols="30" rows="10"></textarea>
+            <label for="foto" class="label">Foto</label>
+            <input type="file" name="foto" id="foto">
+            <button class="btncadastrar"> Cadastrar</button>
+            <button class="btneditar">Editar</button>
+            <input type="hidden" id="idalterar">
+        </form>
+        <button id="btnclose" onclick="fechar()">Fechar</button>    
+    </div>
+    </div>
     </main>
   </div>
+  <script src="main.js"></script>
 </body>
 
 </html>
